--- a/result.html
+++ b/result.html
@@ -111,7 +111,7 @@ body::before {
 <div class="container">
     <div class="header">
         <a href="index.html" class="btn">返回首页</a>
-        <a href="https://xxtyme.github.io/EatCxk/" target="_blank" class="btn easter-egg">彩蛋</a>
+        <a href="https://fangkuai767.github.io/EatKun/" target="_blank" class="btn easter-egg">游戏</a>
     </div>
     
     <div id="results"></div>
