--- a/result.html
+++ b/result.html
@@ -125,7 +125,7 @@ s
     
     if (query) {
         // 从服务器获取搜索结果的 JSON 数据
-        fetch(`https://49.232.167.176:8086/search/${encodeURIComponent(query)}`)
+        fetch(`http://49.232.167.176:8086/search/${encodeURIComponent(query)}`)
             .then(response => response.json())
             .then(data => {
                 const resultsDiv = document.getElementById("results");
